--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
+        "maatwebsite/excel": "^3.1",
         "maddhatter/laravel-fullcalendar": "^1.3"
     },
     "require-dev": {
