--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "cviebrock/eloquent-sluggable": "4.8",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jpmurray/laravel-countdown": "^1.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
